@@ -5,12 +5,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.*;
 import ru.practicum.shareit.dto.user.UserDto;
-import ru.practicum.shareit.dto.user.UserResponseDto;
+import ru.practicum.shareit.dto.user.UserRequestDto;
 import ru.practicum.shareit.mapper.UserMapper;
 import ru.practicum.shareit.service.user.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -21,25 +20,25 @@ public class UserController {
     private final UserService userService;
 
     @PostMapping
-    public UserResponseDto create(@Valid @RequestBody UserDto userDto) {
-        log.info("Обработан POST user запрос. email - {}", userDto.getEmail());
-        return UserMapper.map(userService.create(userDto));
+    public UserDto create(@Valid @RequestBody UserRequestDto userRequestDto) {
+        log.info("Обработан POST user запрос. email - {}", userRequestDto.getEmail());
+        return UserMapper.map(userService.create(userRequestDto));
     }
 
     @PatchMapping("/{userId}")
-    public UserResponseDto update(@Valid @RequestBody UserDto userDto, @PathVariable Long userId) {
+    public UserDto update(@Valid @RequestBody UserRequestDto userRequestDto, @PathVariable Long userId) {
         log.info("Обработан PATCH /users/{} запрос.", userId);
-        return UserMapper.map(userService.update(userDto, userId));
+        return UserMapper.map(userService.update(userRequestDto, userId));
     }
 
     @GetMapping
-    public List<UserResponseDto> findAll() {
+    public List<UserDto> findAll() {
         log.info("Обработан GET users запрос.");
-        return userService.findAll().stream().map(UserMapper::map).collect(Collectors.toList());
+        return userService.findAll().stream().map(UserMapper::map).toList();
     }
 
     @GetMapping("/{userId}")
-    public UserResponseDto findById(@PathVariable Long userId) {
+    public UserDto findUserById(@PathVariable Long userId) {
         log.info("Обработан GET /users/{} запрос.", userId);
         return UserMapper.map(userService.findById(userId));
     }
@@ -49,4 +48,5 @@ public class UserController {
         log.info("Обработан DELETE /users/{} запрос.", userId);
         userService.deleteById(userId);
     }
+
 }
